--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,17 @@
-pipeline{
-    agent {label "my-test-hari"}
-    stages{
-        stage("this id for test"){
-            steps{
-                sh "echo this is my page"
-            }
-        }
-    }
-}
+# must be unique in a given SonarQube instance
+sonar.projectKey=mykey
+# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
+sonar.projectName=mykey
+sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+# This property is optional if sonar.modules is set.
+sonar.sources=.
+#sonar.exclusions=**/module/**/CartController.php, **/vendor/**/DistributorService.php
+sonar.exclusions= /
+sonar.inclusions= *
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
+sonar.login=fc4b2eac7709f18b9eb2d0738f4f129bf8eb58e9
+ 1m 1s
+
